# MilePiClub

./: .gitignore  .gitmodules  README.md  camera.py  gps.c  gsm.c  piCamera_install.sh
GSM/: CMakeLists.txt  readme.md  sim900.py  test.py
GSM/src/: main.cpp  sim900.cpp  sim900.h
RFM69HW breakout/: DESCRIPTION  breakout1.brd  breakout1.pro  breakout1.sch  eagle.epf
